examples/test/testpolicy9515.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9515
  namespace: namespace196
spec:
  podSelector:
    matchLabels:
      key44: value42
      key23: value46
      key19: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value33
      podSelector:
        matchLabels:
          key11: value6
          key17: value12
